--- a/dashboards/view_lights_bedroom.yaml
+++ b/dashboards/view_lights_bedroom.yaml
@@ -5,13 +5,16 @@ type: sidebar
 subview: true
 badges: []
 cards:
-  - features:
-      - type: light-brightness
-    type: tile
-    entity: light.cannage_lamp
-  - features:
-      - type: light-brightness
-      - type: light-color-temp
-    type: tile
-    entity: light.bed_reading_bulb
+  - type: grid
+    square: false
+    cards:
+      - entity: light.cannage_lamp
+        type: tile
+        features:
+          - type: light-brightness
+      - entity: light.bed_reading_bulb
+        type: tile
+        features:
+          - type: light-brightness
+          - type: light-color-temp
 
