--- a/dashboards/picture_home_map.yaml
+++ b/dashboards/picture_home_map.yaml
@@ -31,7 +31,7 @@ elements:
     icon: mdi:speaker-wireless
     style:
       top: 18%
-      left: 65%
+      left: 68%
       '--paper-item-icon-color': '#556'
       '--state-media_player-active-color': white
   - type: conditional
@@ -194,7 +194,6 @@ elements:
       '--state-media_player-active-color': white
   - type: state-icon # Lights bedroom
     entity: light.bed_reading_bulb
-    icon: mdi:track-light
     style:
       top: 51%
       left: 16%
@@ -202,25 +201,23 @@ elements:
       '--state-media_player-active-color': white
   - type: state-icon
     entity: light.cannage_lamp
-    icon: mdi:ceiling-light
     style:
       top: 61.5%
       left: 26%
       '--paper-item-icon-color': '#445'
       '--state-media_player-active-color': white
   - type: state-icon # Lights bathroom
-    entity: light.mirror
-    icon: mdi:spotlight
+    entity: light.bathroom_ceiling
     style:
-      top: 10%
-      left: 54.6%
+      top: 18%
+      left: 61%
       '--paper-item-icon-color': '#445'
       '--state-media_player-active-color': white
   - type: state-icon
-    entity: light.bseed_dimmer
+    entity: light.bathroom_mirror
     style:
-      top: 28%
-      left: 63%
+      top: 10%
+      left: 54.6%
       '--paper-item-icon-color': '#445'
       '--state-media_player-active-color': white
   - type: state-icon # Lights wardrobe
@@ -239,7 +236,6 @@ elements:
       '--state-media_player-active-color': white
   - type: state-icon # Lights living room
     entity: light.table_lamp
-    icon: mdi:ceiling-light
     style:
       top: 48.3%
       left: 77%
@@ -247,7 +243,6 @@ elements:
       '--state-media_player-active-color': white
   - type: state-icon
     entity: light.sofa_lamp
-    icon: mdi:ceiling-light
     style:
       top: 78.3%
       left: 66%
@@ -255,18 +250,23 @@ elements:
       '--state-media_player-active-color': white
   - type: state-icon
     entity: light.desk_lamp
-    icon: mdi:desk-lamp
     style:
       top: 87%
       left: 66%
       '--paper-item-icon-color': '#445'
       '--state-media_player-active-color': white
-
   - type: state-icon
     entity: light.entrance_lamp
     style:
       top: 18%
       left: 21%
+      '--paper-item-icon-color': '#445'
+      '--state-media_player-active-color': white
+  - type: state-icon # Lights kitchen
+    entity: light.bseed_dimmer
+    style:
+      top: 28%
+      left: 63%
       '--paper-item-icon-color': '#445'
       '--state-media_player-active-color': white
   - type: state-icon # Lights balcony
