--- a/automations/variables_switches.yaml
+++ b/automations/variables_switches.yaml
@@ -1,6 +1,14 @@
+# - switch.living_room_l1
+# - switch.living_room_l2
+# - switch.living_room_l3
+# - switch.living_room_l4
+# - switch.living_room_l5
+# - switch.living_room_l6
 - switch.bathroom_l1
 - switch.bathroom_l2
+- switch.bedroom_cannage
+# - switch.bedroom_reading_left
+# - switch.bedroom_reading_right
 - switch.balcony_l1
 - switch.balcony_l2
-- switch.bedroom_cannage
 - switch.wardrobe
