--- a/dashboards/picture_home_map.yaml
+++ b/dashboards/picture_home_map.yaml
@@ -235,28 +235,28 @@ elements:
       '--paper-item-icon-color': '#445'
       '--state-media_player-active-color': white
   - type: state-icon # Lights living room
-    entity: light.table_lamp
+    entity: light.living_room_table
     style:
       top: 48.3%
       left: 77%
       '--paper-item-icon-color': '#445'
       '--state-media_player-active-color': white
   - type: state-icon
-    entity: light.sofa_lamp
+    entity: light.living_room_sofa
     style:
       top: 78.3%
       left: 66%
       '--paper-item-icon-color': '#445'
       '--state-media_player-active-color': white
   - type: state-icon
-    entity: light.desk_lamp
+    entity: light.living_room_desk
     style:
       top: 87%
       left: 66%
       '--paper-item-icon-color': '#445'
       '--state-media_player-active-color': white
   - type: state-icon
-    entity: light.entrance_lamp
+    entity: light.living_room_entrance
     style:
       top: 18%
       left: 21%
