--- a/automations/entities_lights.yaml
+++ b/automations/entities_lights.yaml
@@ -1,9 +1,9 @@
-# - light.living_room_rail_entrance
-# - light.living_room_rail_kitchen
-# - light.living_room_countertop
-# - light.living_room_table
-# - light.living_room_sofa
-# - light.living_room_desk
+- light.living_room_rail_entrance
+# - light.kitchen_rail
+- light.kitchen_countertop
+- light.living_room_table
+- light.living_room_sofa
+- light.living_room_desk
 - light.bathroom_ceiling
 - light.bathroom_mirror
 - light.bedroom_cannage
