--- a/dashboards/picture_home_map.yaml
+++ b/dashboards/picture_home_map.yaml
@@ -256,7 +256,7 @@ elements:
       '--paper-item-icon-color': '#445'
       '--state-media_player-active-color': white
   - type: state-icon
-    entity: light.living_room_entrance
+    entity: light.living_room_rail_entrance
     style:
       top: 18%
       left: 21%
