View lights mobile

--- a/dashboards/skynet.yaml
+++ b/dashboards/skynet.yaml
@@ -2,11 +2,12 @@ title: Skynet
 views:
   - !include "view_home_desktop.yaml"
   - !include "view_home_mobile.yaml"
-  - !include "view_lights.yaml"
+  - !include "view_lights_desktop.yaml"
+  - !include "view_lights_mobile.yaml"
   - !include "view_lights_living_room.yaml"
   - !include "view_lights_bathroom.yaml"
   - !include "view_lights_bedroom.yaml"
-  - !include "view_lights_kitchen.yaml"
+  - !include "view_lights_hall_kitchen.yaml"
   - !include "view_lights_wardrobe.yaml"
   - !include "view_lights_balcony.yaml"
   - !include "view_media.yaml"
