--- a/dashboards/picture_home_map.yaml
+++ b/dashboards/picture_home_map.yaml
@@ -193,14 +193,14 @@ elements:
       '--paper-item-icon-color': '#445'
       '--state-media_player-active-color': white
   - type: state-icon # Lights bedroom
-    entity: light.bed_reading_bulb
+    entity: light.bedroom_reading
     style:
       top: 51%
       left: 16%
       '--paper-item-icon-color': '#556'
       '--state-media_player-active-color': white
   - type: state-icon
-    entity: light.bedroom_cannage
+    entity: light.bedroom_ceiling
     style:
       top: 61.5%
       left: 26%
@@ -256,14 +256,14 @@ elements:
       '--paper-item-icon-color': '#445'
       '--state-media_player-active-color': white
   - type: state-icon
-    entity: light.living_room_rail_entrance
+    entity: light.hall_rail_entrance
     style:
       top: 18%
       left: 21%
       '--paper-item-icon-color': '#445'
       '--state-media_player-active-color': white
   - type: state-icon # Lights kitchen
-    entity: light.bseed_dimmer
+    entity: light.kitchen_hood_bseed
     style:
       top: 28%
       left: 63%
