--- a/dashboards/view_lights_hall_kitchen.yaml
+++ b/dashboards/view_lights_hall_kitchen.yaml
@@ -7,16 +7,17 @@ badges: []
 cards:
   - type: grid
     square: false
+    columns: 2
     cards:
+      - entity: light.hall_rail_entrance
+        type: tile
+        features:
+          - type: light-brightness
+          - type: light-color-temp
+      # - entity: light.hall_rail_kitchen # TODO add light
       - entity: light.kitchen_countertop
         type: tile
         features:
           - type: light-brightness
       - entity: light.kitchen_hood_bseed
         type: tile
-      - entity: light.hall_rail_entrance
-        type: tile
-        features:
-          - type: light-brightness
-          - type: light-temperature
-      # - entity: light.hall_rail_kitchen # TODO add light
