Update entities names

--- a/automations/entities_lights.yaml
+++ b/automations/entities_lights.yaml
@@ -1,4 +1,4 @@
-- light.living_room_rail_entrance
+- light.hall_rail_entrance
 # - light.kitchen_rail
 - light.kitchen_countertop
 - light.living_room_table
@@ -6,7 +6,7 @@
 - light.living_room_desk
 - light.bathroom_ceiling
 - light.bathroom_mirror
-- light.bedroom_cannage
+- light.bedroom_ceiling
 # - light.bedroom_reading_left
 # - light.bedroom_reading_right
 - light.balcony_ceiling
