Unify scenes hstack

--- a/dashboards/view_home_desktop.yaml
+++ b/dashboards/view_home_desktop.yaml
@@ -51,39 +51,7 @@ cards:
     columns: 1
     cards:
       - !include 'card_grid_media.yaml'
-      - type: horizontal-stack
-        cards:
-          - show_name: true
-            show_icon: true
-            type: button
-            tap_action:
-              action: toggle
-            entity: scene.welcome_home
-          - show_name: true
-            show_icon: true
-            type: button
-            tap_action:
-              action: toggle
-            entity: scene.leave_home
-          - show_name: true
-            show_icon: true
-            type: button
-            tap_action:
-              action: toggle
-            entity: scene.focus
-          - show_name: true
-            show_icon: true
-            type: button
-            tap_action:
-              action: toggle
-            entity: scene.late_evening
-          - show_name: true
-            show_icon: true
-            type: button
-            tap_action:
-              action: toggle
-            entity: scene.good_night
-            show_state: false
+      - !include 'card_hstack_scenes.yaml'
       - initial_view: dayGridDay
         type: calendar
         entities:
