--- a/dashboards/view_home_mobile.yaml
+++ b/dashboards/view_home_mobile.yaml
@@ -105,36 +105,4 @@ cards:
               left: 60%
               transform: none
     image: https://upload.wikimedia.org/wikipedia/commons/5/59/Empty.png
-  - type: horizontal-stack
-    cards:
-      - show_name: true
-        show_icon: true
-        type: button
-        tap_action:
-          action: toggle
-        entity: scene.welcome_home
-      - show_name: true
-        show_icon: true
-        type: button
-        tap_action:
-          action: toggle
-        entity: scene.leave_home
-      - show_name: true
-        show_icon: true
-        type: button
-        tap_action:
-          action: toggle
-        entity: scene.focus
-      - show_name: true
-        show_icon: true
-        type: button
-        tap_action:
-          action: toggle
-        entity: scene.late_evening
-      - show_name: true
-        show_icon: true
-        type: button
-        tap_action:
-          action: toggle
-        entity: scene.good_night
-        show_state: false
+  - !include "card_hstack_scenes.yaml" 
