--- a/dashboards/picture_home_map.yaml
+++ b/dashboards/picture_home_map.yaml
@@ -193,7 +193,7 @@ elements:
       '--paper-item-icon-color': '#445'
       '--state-media_player-active-color': white
   - type: state-icon # Lights bedroom
-    entity: light.bedroom_reading
+    entity: light.bedroom_reading_left
     style:
       top: 51%
       left: 16%
@@ -267,6 +267,13 @@ elements:
     style:
       top: 28%
       left: 63%
+      '--paper-item-icon-color': '#445'
+      '--state-media_player-active-color': white
+  - type: state-icon
+    entity: light.kitchen_countertop
+    style:
+      top: 28%
+      left: 78%
       '--paper-item-icon-color': '#445'
       '--state-media_player-active-color': white
   - type: state-icon # Lights balcony
