--- a/themes.yaml
+++ b/themes.yaml
@@ -20,6 +20,7 @@ skynet:
   state-icon-unavailable-color: 'rgba(var(--primary-color), 0.6)'
   state-active-color: 'var(--primary-color)'
   state-media_player-active-color: 'var(--primary-color)'
+  state-input_boolean-off-color: 'var(--disabled-text-color)'
   paper-item-icon-active-color: '#FFFFFF'
 
   # Material Design icons
