--- a/entities/switches.yaml
+++ b/entities/switches.yaml
@@ -1,5 +1,5 @@
 - switch.living_room_l1
-# - switch.living_room_l2
+- switch.living_room_l2
 - switch.living_room_l3
 - switch.living_room_l4
 - switch.living_room_l5
