--- a/dashboards/picture_home_map.yaml
+++ b/dashboards/picture_home_map.yaml
@@ -263,6 +263,13 @@ elements:
       '--paper-item-icon-color': '#445'
       '--state-media_player-active-color': white
   - type: state-icon # Lights kitchen
+    entity: light.kitchen_spot
+    style:
+      top: 37%
+      left: 78%
+      '--paper-item-icon-color': '#445'
+      '--state-media_player-active-color': white
+  - type: state-icon
     entity: switch.kitchen_hood
     style:
       top: 28%
