Add right bedroom spot, kitchen leakage sensor

--- a/entities/lights.yaml
+++ b/entities/lights.yaml
@@ -8,7 +8,7 @@
 - light.bathroom_mirror
 - light.bedroom_ceiling
 - light.bedroom_reading_left
-# - light.bedroom_reading_right
+- light.bedroom_reading_right
 - light.balcony_ceiling
 - light.balcony_bamboo
 - light.wardrobe
