--- a/dashboards/picture_home_map.yaml
+++ b/dashboards/picture_home_map.yaml
@@ -186,7 +186,14 @@ elements:
       '--paper-item-icon-color': '#445'
       '--state-media_player-active-color': white
   - type: state-icon # Sensors water leakage
-    entity: binary_sensor.air_cond_leakage_leak_sensor
+    entity: binary_sensor.kitchen_leakage
+    style:
+      top: 28%
+      left: 70.6%
+      '--paper-item-icon-color': '#445'
+      '--state-media_player-active-color': white
+  - type: state-icon
+    entity: binary_sensor.air_cond_leakage
     style:
       top: 82.5%
       left: 40%
@@ -197,6 +204,14 @@ elements:
     style:
       top: 51%
       left: 16%
+      '--paper-item-icon-color': '#556'
+      '--state-media_player-active-color': white
+  - type: state-icon
+    entity: light.bedroom_reading_right
+    style:
+      top: 72%
+      left: 12%
+      transform: scaleY(-1)
       '--paper-item-icon-color': '#556'
       '--state-media_player-active-color': white
   - type: state-icon
