--- a/entities/switches.yaml
+++ b/entities/switches.yaml
@@ -8,7 +8,7 @@
 - switch.bathroom_l2
 - switch.bedroom_ceiling
 - switch.bedroom_reading_left
-# - switch.bedroom_reading_right
+- switch.bedroom_reading_right
 - switch.balcony_l1
 - switch.balcony_l2
 - switch.wardrobe
